# BeamNG-MP-Server-old

./: Cargo.toml  Server.sln  index.js  package-lock.json  package.json  server.json
BeamNG. Drive Multiplayer Server/: BeamNG. Drive Multiplayer Server.cpp  BeamNG. Drive Multiplayer Server.vcxproj  BeamNG. Drive Multiplayer Server.vcxproj.filters
BeamNG. Drive Multiplayer Server/x64/Debug/: BeamNG. Drive Multiplayer Server.pch  vc141.idb
BeamNG. Drive Multiplayer Server/x64/Debug/BeamNG. .BFD8A05A.tlog/: BeamNG. Drive Multiplayer Server.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cfg/: server.json
src/: main.rs
x64/Debug/: BeamNG. Drive Multiplayer Server.ilk
