[package]
name = "BeamNG-MP-Rust"
version = "0.1.0"
authors = ["Антон <KLiF249@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"]}